--- a/style.css
+++ b/style.css
@@ -1,6 +1,35 @@
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,700&family=Poppins&display=swap');
+
 body {
     margin: 0%;
+    display: flex;
+    flex-direction: column;
 }
 
+#wrapper {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-family: 'DM Sans', sans-serif;
+}
 
+#wrapper * {
+    margin: 15px;
+}
 
+#wrapper h2 {
+    text-align: center;
+}
+
+#title-wrap {
+    padding: 15px;
+    border-radius: 15px;
+}
+
+.glass {
+    backdrop-filter: blur();
+    background: linear-gradient(45deg, rgba(44, 7, 206, 0.3), rgba(203, 184, 255, 0.3));
+}
